<resources>
    <string name="app_name">Manage Me</string>
    <string name="add_title_of_task">Add Title of Task</string>
    <string name="auto_fill_string">Title Task</string>
    <string name="set">Set</string>
    <string name="add_description">Add Description</string>
    <string name="new_task">New Task</string>
    <string name="done">done</string>
    <string name="get_started">Get Started</string>
    <string name="query">32+4</string>
    <string name="timerText">30s</string>
    <string name="scoreText">0/0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>

</resources>