<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notes_Editor_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/titleTaskNotesEditor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_title_of_task"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.075"
            android:autofillHints="@string/auto_fill_string" />

        <EditText
            android:id="@+id/descriptionNotesEditor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_description"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.075"
            android:autofillHints="@string/auto_fill_string"
            android:backgroundTint="@color/teal_700"/>

        <Button
            android:id="@+id/doneBtnNotesEditor"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_gravity="right"
            android:layout_marginTop="32dp"
            android:background="@drawable/custom_button"
            android:shadowColor="#333"
            android:text="done"
            android:textColor="@color/white" />

    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>