<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".taskEditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="48dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"


        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/titleTextTaskEditor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/auto_fill_string"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/add_title_of_task"
            android:inputType="textPersonName"
            android:textStyle="bold"
            android:textSize="24dp"
            android:textColor="@color/schema_heading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.075" />

        <EditText
            android:paddingTop="32dp"
            android:id="@+id/descriptionTaskEditor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/auto_fill_string"
            android:backgroundTint="@color/teal_700"
            android:ems="10"
            android:hint="@string/add_description"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.075" />

        <Button
            android:id="@+id/doneBtnNotesEditor"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_gravity="right"
            android:layout_marginTop="32dp"
            android:background="@drawable/custom_button"
            android:shadowColor="#333"
            android:text="done"
            android:onClick="doneUpdate"
            android:textColor="@color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>